src/tests/snapshots/learn_chumsky__tests__expr__simple_expressions-5.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
(((wrapped)))()
---

Some(
    (
        Call(
            (
                Ident("wrapped"),
                3..10,
            ),
            [],
        ),
        3..15,
    ),
)

--- Errors ---
[]
---
