src/tests/snapshots/learn_chumsky__tests__expr__simple_expressions.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
indentifier_1
---

Some(
    Spanned(
        Ident("indentifier_1"),
        0..13,
    ),
)

--- Errors ---
[]
---
