src/tests/snapshots/learn_chumsky__tests__expr__unary_expressions-3.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
-0.
---

Some(
    (
        Unary(
            Neg,
            (
                Float(0, 0),
                1..3,
            ),
        ),
        0..3,
    ),
)

--- Errors ---
[]
---
