src/tests/snapshots/learn_chumsky__tests__expr__unary_expressions-4.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
---3
---

Some(
    (
        Unary(
            Neg,
            (
                Unary(
                    Neg,
                    (
                        Unary(
                            Neg,
                            (
                                Int(3),
                                3..4,
                            ),
                        ),
                        2..4,
                    ),
                ),
                1..4,
            ),
        ),
        0..4,
    ),
)

--- Errors ---
[]
---
