src/tests/snapshots/learn_chumsky__tests__expr__unary_expressions-6.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
!false
---

Some(
    (
        Unary(
            Not,
            (
                Ident("false"),
                1..6,
            ),
        ),
        0..6,
    ),
)

--- Errors ---
[]
---
