src/tests/snapshots/learn_chumsky__tests__expr__unary_expressions-8.snap
---
source: src/test.rs
expression: "&snapshot"
---
--- Input ---
!(lhs == rhs)
---

Some(
    (
        Unary(
            Not,
            (
                Binary(
                    (
                        Ident("lhs"),
                        2..5,
                    ),
                    Eq,
                    (
                        Ident("rhs"),
                        9..12,
                    ),
                ),
                2..12,
            ),
        ),
        0..12,
    ),
)

--- Errors ---
[]
---
