src/tests/snapshots/learn_chumsky__tests__expr__variables.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
{
	let msg = "Hello World!\n";
	let /* mut */ counter = 0;

	// TODO: count from 0 to 10 and print f"{counter}: Hello World!\n" every time
}
---

Some(
    (
        Block(
            [
                Item(
                    (
                        Binding {
                            name: (
                                "msg",
                                7..10,
                            ),
                            rhs: (
                                String("Hello World!\n"),
                                13..29,
                            ),
                        },
                        3..30,
                    ),
                ),
                Item(
                    (
                        Binding {
                            name: (
                                "counter",
                                46..53,
                            ),
                            rhs: (
                                Int(0),
                                56..57,
                            ),
                        },
                        32..58,
                    ),
                ),
            ],
        ),
        0..140,
    ),
)

--- Errors ---
[]
---
